fix: csrf plugin by using provided COMMON_URL env var

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -125,6 +125,7 @@ services:
       COMMON_LOG_FORMAT: text
       COMMON_LOG_LEVEL: info # trace, debug, info, warn, error, fatal
       COMMON_ENV: local
+      COMMON_URL: http://localhost:9999
       # Services
       SENTRY_DSN: #sentryDSN
       DATABASE_HOST: full-stack-template-database
